# Random-Particle-Optimization

./: .gitignore  LICENSE  README.md  RPO.ino  RPO.m  RobotRPO.ino  main.cpp  selectAP.ino
RPO Arduino/: RPO Arduino.ino  RobotRPO.ino  selectAP.ino
RPO MATLAB/: AP_selector.m  RPO.m  potential.m
RPO cpp/: CMakeLists.txt  main.cpp  rpo_ops.hpp
RPO cpp/rpo/: CMakeLists.txt  rpo.cpp  rpo.hpp
